--- a/portfolio-service/pom.xml
+++ b/portfolio-service/pom.xml
@@ -24,7 +24,11 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.chinasoft</groupId>
+            <artifactId>bank-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
