--- a/trade-service/src/main/resources/application.yml
+++ b/trade-service/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
   port: 9011
   servlet:
-    context-path: /api/trade
+#    context-path: /api/trade
 spring:
   application:
     name: trade-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.3.126:3306/private_bank?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.3.126:3306/private_bank?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: zyx
 
