--- a/approval-service/src/main/resources/application.yml
+++ b/approval-service/src/main/resources/application.yml
@@ -13,7 +13,9 @@ spring:
 
 eureka:
   client:
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
-      defaultZone: http://localhost:9001/eureka
+      defaultZone: http://localhost:9001/eureka/
   instance:
     prefer-ip-address: true
