risk模块基本完成

--- a/risk-service/pom.xml
+++ b/risk-service/pom.xml
@@ -63,7 +63,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.chinasoft.riskservice.RiskServiceApplication</mainClass>
+                    <mainClass>com.chinasoft.RiskServiceApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
