--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -5,3 +5,18 @@ server:
 spring:
   application:
     name: notification-service
+  datasource:
+    url: jdbc:mysql://192.168.3.126:3306/private_bank?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    username: root
+    password: zyx
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    jpa:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+    cloud:
+      config:
+        uri: http://localhost:9001
+      discovery:
+        enabled: true
+        service-id: discovery-service
