--- a/risk-service/src/main/resources/application.yml
+++ b/risk-service/src/main/resources/application.yml
@@ -10,6 +10,17 @@ spring:
     url: jdbc:mysql://192.168.3.126:3306/private_bank?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: zyx
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  cloud:
+    config:
+      uri: http://localhost:9001
+    discovery:
+      enabled: true
+      service-id: discovery-service
+
 
 eureka:
   client:
