实现完成了登录，注册，密码加密。实现创建客户 添加客户的基本信息，根据名字查询 根据风险等级查询 根据名字模糊搜索 删除不在需要客户。

--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 9006
-  servlet:
-    context-path: /api/auth
+#  servlet:
+#    context-path: /api/auth
 spring:
   application:
     name: auth-service
